# Projet-INF1015

./: CMakeLists.txt  RAII.cpp  RAII.h  README.txt  board.cpp  board.h  chessgameexception.h  color.cpp  color.h  main.cpp  maingui.cpp  maingui.h  movementspiece.cpp  movementspiece.h  piece.cpp  piece.h  piecetype.cpp  piecetype.h  raii_initialposition.cpp  raii_initialposition.h  squarebox.cpp  squarebox.h
